--- a/index.html
+++ b/index.html
@@ -441,14 +441,10 @@
                                 <Icon path={paths.shield} className="w-5 h-5"/> System-Überwachung aktiv
                             </div>
                             <p className="text-[11px] leading-relaxed font-medium text-slate-600">
-            <strong className="text-slate-900 block mb-1">Erklärung der visuellen Symbole:</strong>
-            Die oben eingeblendeten Augen symbolisieren das psychologische Prinzip der <strong>sozialen Beobachtung</strong>. 
-            Wissenschaftliche Studien belegen, dass allein das Gefühl, beobachtet zu werden, die Preisgabe privater Informationen massiv beeinflusst. 
-            <br /><br />
-            <strong className="text-slate-900 block mb-1">Was mit Ihren Daten passiert:</strong>
-            Jede Ihrer Eingaben (einschließlich Korrekturen und gelöschter Felder) wird in Echtzeit systematisch erfasst. 
-            Diese Informationen fließen unmittelbar in eine algorithmische Bewertung Ihrer Person ein und werden zur wissenschaftlichen Auswertung an die Forschungsplattform <strong>SoSci Survey</strong> übertragen. 
-            Bitte entscheiden Sie unter Berücksichtigung dieser Beobachtungssituation bewusst, welche privaten Details Sie für dieses Forschungsprofil offenlegen möchten.
+            Die oben eingeblendeten Augen symbolisieren das <strong>Prinzip der sozialen Beobachtung</strong>. 
+            Sie signalisieren, dass jede Ihrer Eingaben in diesem Moment systematisch erfasst wird, um eine algorithmische Personalisierung vorzunehmen. 
+            Die von Ihnen bereitgestellten Informationen zu Gesundheit, Finanzen und Intimsphäre werden unmittelbar verarbeitet und für die nachfolgende Auswertung gespeichert. 
+            Wir bitten Sie um eine bewusste Entscheidung darüber, welche privaten Details Sie für dieses Forschungsprofil offenlegen möchten.
         </p>
                         </div>
                     )}
@@ -471,7 +467,10 @@
                                 <p className="text-sm text-gray-600 leading-relaxed mb-3">Wir nutzen Cookies und Tracking-Technologien, um Ihr Nutzererlebnis zu personalisieren und Marketingmaßnahmen zu verbessern. {details && <span className="block mt-2 text-gray-500">Dabei werden Daten an Dritte übertragen, auch außerhalb der EU. Dies kann Risiken für die Sicherheit Ihrer Daten bergen.</span>}</p>
                                 <button onClick={() => setDetails(!details)} className="text-xs text-blue-600 underline font-medium hover:text-blue-800">{details ? "Weniger Details" : "Mehr Informationen"}</button>
                             </div>
-                            {config.info && (<div className="w-full md:w-72 shrink-0 animate-fade-in"><div className="bg-red-50 border-2 border-red-200 p-3 rounded-lg text-xs text-red-900 shadow-sm"><div className="flex items-center gap-2 font-bold mb-1 text-red-700 uppercase tracking-wide"><Icon path={paths.shield} className="w-4 h-4"/> Datenschutz-Hinweis</div>Achtung: Wenn Sie zustimmen, können Ihre persönlichen Informationen an Dritte weitergegeben und für Werbung genutzt werden.</div></div>)}
+                            {config.info && (<div className="w-full md:w-72 shrink-0 animate-fade-in"><div className="bg-red-50 border-2 border-red-200 p-3 rounded-lg text-xs text-red-900 shadow-sm"><div className="flex items-center gap-2 font-bold mb-1 text-red-700 uppercase tracking-wide"><Icon path={paths.shield} className="w-4 h-4"/> DATENERFASSUNG AKTIV</div>Die oben eingeblendeten Augen symbolisieren das <strong>Prinzip der sozialen Beobachtung</strong>. 
+            Sie signalisieren, dass jede Ihrer Eingaben in diesem Moment systematisch erfasst wird. 
+            Die bereitgestellten Informationen zu Gesundheit, Finanzen und Intimsphäre werden unmittelbar verarbeitet und gespeichert. 
+            Wir bitten Sie um eine <strong>bewusste Entscheidung</strong> darüber, welche Details Sie offenlegen möchten.</div></div>)}
                             <div className="flex flex-col gap-3 w-full md:w-auto shrink-0">
                                 <button onClick={() => onDecision('accept_all')} className="px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white font-bold rounded shadow-md text-sm transition-transform active:scale-95">Alle akzeptieren</button>
                                 <button onClick={() => onDecision('reject_all')} className="px-8 py-3 bg-white hover:bg-gray-100 text-gray-700 font-medium border border-gray-300 rounded shadow-sm text-sm transition-colors">Nur Notwendige</button>
