--- a/index.html
+++ b/index.html
@@ -417,24 +417,21 @@
         );
 
         // --- STIMULUS OVERLAY ---
-        const StimulusOverlay = ({ config, variant = "banner" }) => {
+       const StimulusOverlay = ({ config, variant = "banner" }) => {
     if (!config || !config.eyes) return null;
     const eyeColor = variant === 'banner' ? '#3b82f6' : '#5D4037';
     
-    // Augen schweben fixiert oben (form) oder absolut im Banner (banner)
+    // Banner: Von -top-20 auf -top-12 (näher ran)
     const positionClass = variant === 'form' 
         ? 'fixed top-4 left-1/2 -translate-x-1/2' 
-        : 'absolute -top-20 left-1/2 -translate-x-1/2'; 
+        : 'absolute -top-12 left-1/2 -translate-x-1/2'; 
 
     return (
-        <div className={`pointer-events-none z-[70] flex flex-col items-center gap-2 ${positionClass}`}>
-            <div className="flex gap-4 items-center justify-center filter drop-shadow-xl">
-                <div className="bg-white/90 backdrop-blur-sm p-2 rounded-full border border-slate-200 shadow-2xl overflow-hidden animate-pulse-slow">
-                    <RealisticEye color={eyeColor} className="w-20 h-14" hasLashes={variant === 'form'} />
-                </div>
-                <div className="bg-white/90 backdrop-blur-sm p-2 rounded-full border border-slate-200 shadow-2xl overflow-hidden animate-pulse-slow">
-                    <RealisticEye color={eyeColor} className="w-20 h-14" hasLashes={variant === 'form'} />
-                </div>
+        <div className={`pointer-events-none z-[100] flex flex-col items-center gap-2 ${positionClass}`}>
+            {/* Weißer Glow-Effekt im Hintergrund, damit sie auf bunten Blogs auffallen */}
+            <div className="flex gap-4 items-center justify-center bg-white p-2 rounded-full shadow-[0_0_30px_rgba(255,255,255,1),0_10px_30px_rgba(0,0,0,0.2)] border border-slate-100">
+                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={variant === 'form'} />
+                <RealisticEye color={eyeColor} className="w-20 h-14 animate-pulse-slow" hasLashes={variant === 'form'} />
             </div>
         </div>
     );
