--- a/index.html
+++ b/index.html
@@ -780,13 +780,28 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
     const isAgeInvalid = !noAnswers.age && formData.age !== '' && formData.age !== 'keine_angabe' && parseInt(formData.age) < 18;
 
     const isFormComplete = () => {
-        const check = (f) => noAnswers[f] || (formData[f] !== '' && formData[f] !== undefined);
-        return (
-            check('age') && check('gender') && check('height') && check('weight') && check('insurance') &&
-            check('dietStyle') && check('tobacco') && check('alcohol') && check('drugs') &&
-            check('sportFreq') && check('mentalHealth') &&
-check('partners') && check('income') && check('reproduction') && !isAgeInvalid        );
+    // Hilfsfunktion: Ist die Frage beantwortet ODER "Keine Angabe" gewählt?
+    const check = (f) => {
+        if (noAnswers[f]) return true; // Haken bei "Keine Angabe" -> OK
+        const val = formData[f];
+        if (Array.isArray(val)) return val.length > 0; // Für Ernährung: Mindestens 1 Chip gewählt?
+        return val !== '' && val !== undefined && val !== null; // Für Text/Select: Nicht leer?
     };
+
+    // Hier müssen EXAKT die Felder stehen, die du im Formular hast:
+    const requiredFields = [
+        'age', 'gender', 'height', 'weight', 'insurance', 
+        'dietStyle', 'tobacco', 'alcohol', 'drugs', 
+        'sportFreq', 'bodySatisfaction', 'bodyChangeGoals', 'mentalHealth',
+        'sexOrientation', 'reproduction', 'partners', 'stis',
+        'income', 'debts'
+    ];
+
+    // Prüfe, ob jedes einzelne Feld in der Liste oben "check" besteht
+    const allFieldsOk = requiredFields.every(field => check(field));
+
+    return allFieldsOk && !isAgeInvalid;
+};
 
     const NoAnswer = ({ field }) => (
         <label className="flex items-center gap-2 mt-2 cursor-pointer w-fit group">
