--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
         bodySatisfaction: 5, 
         bodyChange: '', bodyChangeDetails: '',
         mentalHealth: '', mentalHealthDetails: '',
-        sexOrientation: '', partners: '', reproduction: '', 
+        sexOrientation: '', reproduction: '', 
         stis: '', stisDetails: '',
         income: '', 
         debts: '', debtsDetails: ''
@@ -848,7 +848,7 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                                 <NoAnswer field="age" />
                             </div>
                             <div className={noAnswers.gender ? 'opacity-30' : ''}>
-                                <label className="text-sm font-bold block mb-2">Biologisches Geschlecht?</label>
+                                <label className="text-sm font-bold block mb-2">Welchem Geschlecht fühlen Sie sich zugehörig?</label>
                                 <select name="gender" disabled={noAnswers.gender} value={noAnswers.gender ? '' : formData.gender} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
                                     <option value="">Wählen...</option><option value="m">Männlich</option><option value="w">Weiblich</option><option value="d">Divers</option>
                                 </select>
@@ -857,20 +857,20 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                         </div>
                         <div className="grid grid-cols-1 md:grid-cols-2 gap-8">
                             <div className={noAnswers.height ? 'opacity-30' : ''}>
-                                <label className="text-sm font-bold block mb-2">Körpergröße (cm)?</label>
+                                <label className="text-sm font-bold block mb-2">Wie groß sind Sie (cm)?</label>
                                 <input type="text" name="height" disabled={noAnswers.height} value={noAnswers.height ? '' : formData.height} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent" />
                                 <NoAnswer field="height" />
                             </div>
                             <div className={noAnswers.weight ? 'opacity-30' : ''}>
-                                <label className="text-sm font-bold block mb-2">Körpergewicht (kg)?</label>
+                                <label className="text-sm font-bold block mb-2"> Was ist Ihr Körpergewicht (kg)?</label>
                                 <input type="text" name="weight" disabled={noAnswers.weight} value={noAnswers.weight ? '' : formData.weight} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent" />
                                 <NoAnswer field="weight" />
                             </div>
                         </div>
                         <div className={noAnswers.insurance ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Versicherungsstatus?</label>
+                            <label className="text-sm font-bold block mb-2">Wie sind Sie versichert?</label>
                             <select name="insurance" disabled={noAnswers.insurance} value={formData.insurance} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
-                                <option value="">Wählen...</option><option value="gkv">Gesetzlich</option><option value="pkv">Privat</option>
+                                <option value="">Wählen...</option><option value="gkv">Gesetzlich</option><option value="pkv">Privat</option><option value="other">Andere</option>
                             </select>
                             <NoAnswer field="insurance" />
                         </div>
@@ -880,9 +880,9 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                     <section className="space-y-8">
                         <h3 className="text-[11px] font-black uppercase tracking-widest text-blue-600 mb-6 border-b pb-2">Modul 02: Metabolischer Lebensstil</h3>
                         <div className={noAnswers.dietStyle ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-4">Aktuelle Ernährungsform(en)?</label>
+                            <label className="text-sm font-bold block mb-4">Welche Ernährungsform(en) praktizieren Sie aktuell?</label>
                             <div className="flex flex-wrap gap-2">
-                                {['Omnivor', 'Vegetarisch', 'Vegan', 'Keto', 'Fasten'].map(diet => (
+                                {['Omnivor', 'Vegetarisch', 'Vegan', 'Keto', 'Fasten', 'Intervall'].map(diet => (
                                     <button key={diet} type="button" disabled={noAnswers.dietStyle} onClick={() => {
                                         interact();
                                         const next = formData.dietStyle.includes(diet) ? formData.dietStyle.filter(d => d !== diet) : [...formData.dietStyle, diet];
@@ -902,9 +902,9 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                         
                         {/* Sport-Logik mit bedingtem Textfeld */}
                         <div className={noAnswers.sportFreq ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Häufigkeit sportlicher Betätigung?</label>
+                            <label className="text-sm font-bold block mb-2">Wie häufig treiben Sie Sport?</label>
                             <select name="sportFreq" disabled={noAnswers.sportFreq} value={formData.sportFreq} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
-                                <option value="">Wählen...</option><option value="täglich">Täglich</option><option value="oft">2-4 mal pro Woche</option><option value="selten">1 mal pro Woche</option><option value="nie">Nie</option>
+                                <option value="">Wählen...</option><option value="täglich">Täglich</option><option value="oft">2-4 mal pro Woche</option><option value="selten">1 mal pro Woche</option><option value="nie">Selten/Nie</option>
                             </select>
                             {formData.sportFreq !== 'nie' && formData.sportFreq !== '' && !noAnswers.sportFreq && (
                                 <div className="mt-4 animate-fade-in">
@@ -915,16 +915,16 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                             <NoAnswer field="sportFreq" />
                         </div>
 
-                        <ConditionalInput label="Konsumieren Sie Tabak- oder Nikotinprodukte?" field="tobacco" placeholder="Welche Produkte und wie oft?" />
-                        <ConditionalInput label="Konsumieren Sie regelmäßig Alkohol?" field="alcohol" placeholder="Getränke und Häufigkeit?" />
-                        <ConditionalInput label="Nutzen Sie illegale Substanzen (z.B. Cannabis, Kokain)?" field="drugs" placeholder="Welche Substanzen?" />
+                        <ConditionalInput label="Konsumieren Sie Tabak- oder Nikotinprodukte?" field="tobacco" placeholder="Wenn ja: Welche Produkte und wie häufig?" />
+                        <ConditionalInput label="Konsumieren Sie regelmäßig Alkohol?" field="alcohol" placeholder="Wenn ja: Welche Getränke und wie häufig?" />
+                        <ConditionalInput label="Nutzen Sie illegale Substanzen (z.B. Cannabis, Kokain)?" field="drugs" placeholder="Wenn ja: Welche Substanzen und wie häufig?" />
                     </section>
 
                     {/* MODUL 05: PSYCHOSOMATIK */}
                     <section className="space-y-12">
                         <h3 className="text-[11px] font-black uppercase tracking-widest text-blue-600 mb-6 border-b pb-2">Modul 05: Psychosomatische Selbstwahrnehmung</h3>
                         <div className={noAnswers.bodySatisfaction ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-1">Zufriedenheit mit dem Körperzustand (1-10)?</label>
+                            <label className="text-sm font-bold block mb-1">Wie zufrieden sind Sie aktuell mit Ihrem Körper?(1-10)?</label>
                             <input type="range" name="bodySatisfaction" min="1" max="10" disabled={noAnswers.bodySatisfaction} value={formData.bodySatisfaction} onChange={handleChange} className="w-full accent-blue-600" />
                             <NoAnswer field="bodySatisfaction" />
                         </div>
@@ -936,32 +936,28 @@ const RegistrationForm = ({ onSubmit, group, audioObject }) => {
                     <section className="space-y-12">
                         <h3 className="text-[11px] font-black uppercase tracking-widest text-blue-600 mb-6 border-b pb-2">Modul 06: Reproduktive Analyse</h3>
                         <div className={noAnswers.sexOrientation ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Sexuelle Orientierung?</label>
+                            <label className="text-sm font-bold block mb-2">Was ist Ihre sexuelle Orientierung?</label>
                             <select name="sexOrientation" disabled={noAnswers.sexOrientation} value={formData.sexOrientation} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
-                                <option value="">Wählen...</option><option value="hetero">Hetero</option><option value="homo">Homo</option><option value="bi">Bi</option><option value="andere">Andere</option>
+                                <option value="">Wählen...</option><option value="hetero">Heterosexuell</option><option value="homo">Homosexuell</option><option value="bi">Bisexuell</option><option value="andere">Andere</option><option value="no">Keine</option>
                             </select>
                             <NoAnswer field="sexOrientation" />
                         </div>
                         <div className={noAnswers.reproduction ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Besteht ein Reproduktionswunsch?</label>
+                            <label className="text-sm font-bold block mb-2">Besteht bei Ihnen ein Reproduktionswunsch?</label>
                             <select name="reproduction" disabled={noAnswers.reproduction} value={formData.reproduction} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
                                 <option value="">Wählen...</option><option value="ja">Ja</option><option value="nein">Nein</option><option value="vielleicht">Vielleicht</option>
                             </select>
                             <NoAnswer field="reproduction" />
                         </div>
-                        <div className={noAnswers.partners ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Anzahl Sexualpartner (Lebenszeit)?</label>
-                            <input type="text" name="partners" disabled={noAnswers.partners} value={noAnswers.partners ? '' : formData.partners} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent" />
-                            <NoAnswer field="partners" />
-                        </div>
-                        <ConditionalInput label="Bekannte Geschlechtskrankheiten?" field="stis" placeholder="Historie der Infektionen..." />
+                        
+                        <ConditionalInput label="Sind bei Ihnen Geschlechtskrankheiten diagnostiziert?" field="stis" placeholder="Historie der Infektionen..." />
                     </section>
 
                     {/* MODUL 07: FINANZEN */}
                     <section className="space-y-12">
                         <h3 className="text-[11px] font-black uppercase tracking-widest text-blue-600 mb-6 border-b pb-2">Modul 07: Sozio-Ökonomischer Status</h3>
                         <div className={noAnswers.income ? 'opacity-30' : ''}>
-                            <label className="text-sm font-bold block mb-2">Monatliches Netto-Einkommen?</label>
+                            <label className="text-sm font-bold block mb-2"> Wie hoch ist Ihr monatliches Netto-Einkommen?</label>
                             <select name="income" disabled={noAnswers.income} value={formData.income} onChange={handleChange} className="w-full py-2 border-b border-slate-200 outline-none bg-transparent">
                                 <option value="">Wählen...</option><option value="1">Bis 1.500€</option><option value="2">Bis 3.500€</option><option value="3">Bis 5.000€</option><option value="4">Über 5.000€</option>
                             </select>
